HelloUltraviolet/Fixtures/RejectedSource/Comptime/DeriveTargetUserError/Expected.uv
//! Expected diagnostic metadata for the DeriveTargetUserError rejected-source specimen.

expectedDiagnostic("E-CTE-0070", "requirement.22.DeriveTargetFailureSemantics")
